:construction_worker: add pytest to ci

--- a/pytest.ini
+++ b/pytest.ini
@@ -1,5 +1,6 @@
 [pytest]
-addopts = --strict
+python_functions = test_*
+addopts = --doctest-modules
 markers = 
     slow: Run tests that use sample data from file
 
